# Otmar-original-files

summer-school-2016-RF-assignment-master/: ASSIGNMENT.md  README.md
summer-school-2016-RF-assignment-master/cpp/: CMakeLists.txt  README  depth_forest_trainer.h  histogram_statistics.h  image_weak_learner.h  weak_learner.h
summer-school-2016-RF-assignment-master/data/: config_test.yaml
summer-school-2016-RF-assignment-solution-master/: README.md
summer-school-2016-SVM-assignment-master/: LICENSE  README.md  SVM_exercise.ipynb  config.ini
summer-school-2016-SVM-assignment-solution-master/: README.md  SVM_exercise_solutions.ipynb  config.ini  credentials.json
